log/build_2025-01-23_02-32-29/arm_bot/stderr.log
  File "/home/dog/ros2_ws/install/arm_bot/lib/python3.8/site-packages/arm_bot/mpu.py", line 4
    import
          ^
SyntaxError: invalid syntax

